<resources>
    <string name="app_name">Projeto</string>
    <string name="voltar">voltar</string>
    <string name="pressãoAlta">Pressão Alta</string>
    <string name="diabetes">Diabetes</string>
    <string name="analgesico">Analgésico x Antiinflamatório</string>
    <string name="vitaminas">Vitaminas</string>
    <string name="primeirosSocorros">Primeiros Socorros</string>
    <string name="descarte">Descarte Correto</string>
    <string name="bula">Bulário Eletrônico</string>
    <string name="generico">Medicamentos Genéricos</string>
    <string name="cuidados">Cuidados Gerais</string>
    <string name="info">Informações Gerais</string>
    <string name="alimento">Alimente-se bem</string>
    <string name="principaisSintomas">Principais Sintomas</string>
    <string name="textoSintomaPressao">A pressão alta faz com que o coração tenha um esforço maior do que o normal para que o sangue seja distribuído corretamente no corpo. É considerada um dos mais importantes fatores de risco para o desenvolvimento de doenças cardiovasculares, cerebrovasculares e renais, responsável por pelo menos 40% das mortes por doença arterial coronariana, como infarto cardíaco e, em combinação com o diabetes, 50% dos casos de insuficiência renal terminal. Entre os principais sintomas da Pressão Alta podemos citar fraqueza, dores no peito, dor de cabeça, sangramento nasal, visão borrada, tontura e zumbidos no ouvido. </string>
    <string name="principaisMedicamentos">Medicamentos Utilizados</string>
    <string name="textoMedicamentoPressao">Os medicamentos utilizados no combate à Pressão Alta incluem: Atenolol, Captopril, Enalapril, Hidroclorotiazida, Losartana e Propranolol</string>
    <string name="fatoresDeRisco">Fatores de Risco</string>
    <string name="textoFatoresDeRisco">É uma doença que, em 90% dos casos, é herdada dos pais. Porém, há vários fatores que influenciam nos níveis da pressão arterial. Entre eles, podemos citar: Fumo, Consumo de Bebidas Alcoólicas, Obesidade, Estresse, Elevado consumo de sal, Níveis altos de Colesterol, Sedentarismo. O sedentarismo contribui com a epidemia crescente de obesidade e o aumento de doenças como a Pressão Alta. Ele aumenta o risco de hipertensão em até 30% quando comparado com indivíduos ativos. </string>
    <string name="textoDiabetes">Diabetes Mellitus (DM) é uma síndrome metabólica de origem múltipla, decorrente da falta de insulina e/ou da incapacidade de a insulina exercer adequadamente seus efeitos. A insulina é produzida pelo pâncreas e é responsável pela manutenção do metabolismo da glicose e a falta desse hormônio provoca déficit na metabolização da glicose e, conseqüentemente, diabetes. Caracteriza-se por altas taxas de açúcar no sangue (hiperglicemia) de forma permanente.</string>
    <string name="tipoUm">Diabetes Tipo 1</string>
    <string name="tipoDois">DIabetes Tipo 2</string>
    <string name="textoTipoUm">É causada pela destruição das células produtoras de insulina, em decorrência de defeito do sistema imunológico em que os anticorpos atacam as células que produzem a insulina. Ocorre em cerca de 5 a 10% dos diabéticos. Entre os principais sintomas da doença podemos citar vontade de urinar diversas vezes, fome freqüente, sede constante, perda de peso, fraqueza, fadiga, nervosismo, mudanças de humor, náusea, vômito. Seu tratamento é feito através do uso diário de insulina. </string>
    <string name="textoTipoDois">Resulta da resistência à insulina e de deficiência na secreção de insulina. Ocorre em cerca de 90% dos diabéticos. Entre os principais sintomas estão infecções freqüentes, alteração visual (visão embaçada), dificuldade na cicatrização de feridas, formigamento nos pés,  e o aparecimento de furúnculos. Seu tratamento é feito através de medicamentos, sendo os principais Metformina, Glimepirida, Gliclazida, e em alguns casos, também a a insulina.</string>
    <string name="principaisDiferencas">A forma mais simples de explicar a diferença entre um remédio analgésico e um anti-inflamatório é que o primeiro atua diretamente no combate à dor. Já o segundo serve para eliminar uma inflamação e, consequentemente, a dor causada por ela. Como o anti-inflamatório acaba com a causa da dor, ele vai indiretamente solucionar os dois problemas de uma só vez. Enquanto isso, o analgésico até elimina a dor, mas o que está provocando ela continua ali, o que significa que, ao passar o efeito do medicamento, ela pode retornar. </string>
    <string name="tipoAnalgesico">Analgésicos</string>
    <string name="textoAnalgesico">São medicamentos que atuam no tratamento de todos os tipos de dores físicas (dor de cabeça, dores musculares, cólicas, dor de dente, por exemplo). Quando ingeridos em grande quantidade, podem causar danos ao estômago, fígado ou rins. No caso de medicamentos opióides, ainda existe o risco de dependência. </string>
    <string name="tipoAnti">Anti-inflamatório</string>
    <string name="textoAnti">Existem 2 tipos de anti-inflamatórios: os esteroides e os não esteroides. Os esteroides geralmente são recomendados para tratar asma e doenças inflamatórias autoimunes, como o Lúpus. Já os não esteroides costumam ser usados para tratar artrite reumatoide, contusões, traumas, e também dores e inflamações comuns, como as de garganta. O uso prolongado pode causar problemas como osteoporose, úlceras, retenção de líquidos e aumento da suscetibilidade a infecções. </string>
    <string name="textoVitaminas">As vitaminas são substâncias orgânicas que o nosso corpo necessita em pequenas quantidades, que são indispensáveis ao funcionamento do organismo, já que são essenciais para manter o sistema imunológico saudável, garantir o funcionamento correto do metabolismo e promover o crescimento. Devido à sua importância na regulação de processos metabólicos, quando são ingeridas em quantidade insuficiente ou quando o organismo apresenta alguma carência vitamínica, isso pode trazer sérios riscos para a saúde, como problemas de visão, musculares ou neurológicos. Como o organismo é incapaz de sintetizar vitaminas, é importante que sejam ingeridas através da alimentação, sendo muito importante fazer uma dieta equilibrada, rica em legumes e fontes de proteína variadas. Além da ingestão de alimentos ricos em vitaminas, também se pode ingerir suplementos alimentares que geralmente contêm as doses diárias recomendadas de vitaminas e minerais essenciais ao bom funcionamento do organismo, sendo importante que sejam indicadas pelo nutricionista. </string>
    <string name="vitA">Vitamina A</string>
    <string name="textoVitA"> Tem como principal função manter a visão saudável. Sua deficiência pode causar Cegueira ou cegueira noturna, irritação da garganta, sinusite, abscessos nos ouvidos e na boca, secura das pálpebras. É encontrada em alimentos como fígado, gema de ovo, leite, cenouras, batata doce, abóbora, damasco, melão, espinafres e brócolis.</string>
    <string name="vitC">Vitamina C</string>
    <string name="textoVitC">Auxilia na formação de colágeno, na absorção do ferro e também tem efeito antioxidante. Sua deficiência pode causar sangramento das mucosas, cicatrização inadequada de feridas, amolecimento das extremidades dos ossos e enfraquecimento e perda de dentes. É encontrada em frutas e sumos de frutas, brócolis, couve de Bruxelas, pimento verde e vermelho, melão, morango, kiwi e papaia. </string>
    <string name="vitD">Vitamina D</string>
    <string name="textoVitD">Ela ajuda na absorção intestinal do cálcio, diminuindo a excreção do mesmo através da urina e estimula a produção de células ósseas. Se ingerida em quantidade insuficiente, pode causar fragilidade dos ossos. Possui como fone alimentos como leite, óleo de fígado de bacalhau, arenque, sardinha e salmão, e também a luz solar.</string>
    <string name="vitE">Vitamina E</string>
    <string name="textoVitE">Possui efeito antioxidante. Sua deficiência causa problemas neurológicos e anemia em bebês prematuros. É encontrada em óleos vegetais, cereais integrais, verduras de folha verde e nozes.</string>
    <string name="vitK">Vitamina K</string>
    <string name="textoVitK" >Ela contribui para a formação de fatores de coagulação e também auxilia a vitamina D a sintetizar algumas proteínas. É encontrada em alimentos como brócolis, couve de Bruxelas, repolho e espinafres. </string>
    <string name="intoxicacaoMed">Intoxicação Medicamentosa</string>
    <string name="textoIntoxMed">Peça ajuda. Tente lembrar do que tomou, era líquido? capsula? Qual era a cor? Tinha Cheiro? Quantos você tomou?  Onde estava? Como era a caixa do remédio? Quem estiver ajudando deve ligar para CIAV (Centro de Informação Anti-Venenos)  pelo numero 800 250 250 e seguir as instruções de acordo."</string>
    <string name="hipoglicemia">Hipoglicemia</string>
    <string name="textoHipoglicemia">É a baixa de açúcar no sangue, ocorre frequentemente com pessoas diabéticas. Fique calmo(a) e peça ajuda. Tome algumas  gotas de água misturada com açúcar, em casos mais graves será necessário uma visita ao médico.</string>
    <string name="escoriacao">Escoriações</string>
    <string name="textoEscoriacao">São machucados mais superficiais, que irão se curar rápido. Peça ajuda. Aplique gelo protegido numa compressa ou pano; levante a lesão acima do coração por 10 a 15 minutos se for mais leve e 1 a 2 horas se for mais grave. Se a dor continuar  depois de um dia ou se não tiver melhora repetir o processo de gelo na compressa. Em casos mais graves é urgente ver um  médico.</string>
    <string name="queda">Queda</string>
    <string name="textoQueda">Peça ajuda. Diga onde doi, onde machucou, se está sangrando. Quem estiver ajudando deve seguir as seguintes instruções: 1. No caso de Equimoses aplicar frio (saco de gelo) para reduzir o edema, hemorragia e dor. 2. No caso de hematomas apliocar frio e imobilizar a área afetada para reduzir hemorragia. 3. No caso de Hemorragias externas tape o ferimento com um pano limbo ou compressa bem grossa, use compressa fria na  ligadura para reduzir o inchaço, comprima com firmeza a área por 10 minutos sem interrupção e imobilize a área deixando  elevada acima do coração</string>
    <string name="fontePressaoAlta"><a href="https://eurofarma.com.br/artigos/sintomas-da-pressao-alta#:~:text=Os%20sintomas%20da%20hipertens%C3%A3o%20costumam,emba%C3%A7ada%20e%20sangramento%20nasal%C2%B9">https://eurofarma.com.br/sintomas-da-pressao-alta</a></string>
    <string name="textoFonte"><a href="https://bvsms.saude.gov.br/diabetes/">https://bvsms.saude.gov.br/diabetes</a></string>
    <string name="fontesAnti"><a href="https://drauziovarella.uol.com.br/infograficos/principais-diferencas-entre-analgesicos-e-anti-inflamatorios-infografico/">https://drauziovarella.uol.com.br/diferencas-entre-analgesicos-e-anti-inflamatorios/</a></string>
    <string name="fontesAnti2"><a href="https://www.strepsils.com.br/dicas-strepsils-blog/analgeacutesico-e-anti-inflamatoacuterio-afinal-qual-eacute-a-diferenccedila/#:~:text=Qual%20%C3%A9%20a%20diferen%C3%A7a%20entre,a%20dor%20causada%20por%20ela">https://www.strepsils.com.br/analgesico-e-anti-inflamatorio-qual-e-a-diferenca</a></string>
    <string name="fonteVitamina"><a href="https://www.tuasaude.com/vitaminas/#:~:text=As%20vitaminas%20s%C3%A3o%20subst%C3%A2ncias%20org%C3%A2nicas,metabolismo%20e%20promover%20o%20crescimento">https://www.tuasaude.com/vitaminas</a></string>
    <string name="fontePrimeirosSocorros"><a href="https://www.flba.pt/ficheiros/cd/FLBA.114.01%20-%20Manual%20de%20Primeiros%20Socorros%20-%20Idosos.pdf">https://www.flba.pt/Manual-de-Primeiros-Socorros</a></string>
</resources>