<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Analgesicos"
    android:background="#40E0D0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:justificationMode="inter_word"
            android:text="@string/principaisDiferencas"
            android:textColor="#FF000000"
            app:autoSizeTextType="uniform"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:justificationMode="inter_word"
            android:text="@string/tipoAnalgesico"
            android:textColor="#FF000000"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:justificationMode="inter_word"
            android:textColor="#FF000000"
            android:text="@string/textoAnalgesico"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/tipoAnti"
            android:textColor="#FF000000"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:justificationMode="inter_word"
            android:textColor="#FF000000"
            android:text="@string/textoAnti"/>

        <TextView
            android:id="@+id/textFonteAnti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/fontesAnti"
            android:textColorLink="#F8F8FF"/>

        <TextView
            android:id="@+id/textFonteAnti2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:justificationMode="inter_word"
            android:text="@string/fontesAnti2"
            android:textColorLink="#F8F8FF"/>

        <Button
            android:id="@+id/voltar_tipo_remedio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:onClick="voltaTipoRemedio"
            android:text="@string/voltar"
            android:layout_gravity="center_horizontal"
            tools:ignore="OnClick"
            android:backgroundTint="#B22222"
            android:textColor="#FFFFFFFF"/>

    </LinearLayout>


</ScrollView>