<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Diabetes"
    android:background="#21B1B2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:justificationMode="inter_word"
            android:textColor="#FF000000"
            android:textSize="20sp"
            android:text="@string/textoDiabetes"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/tipoUm"
            android:textColor="#FF000000"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:justificationMode="inter_word"
            android:textColor="#FF000000"
            android:textSize="20sp"
            android:text="@string/textoTipoUm"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/tipoDois"
            android:textColor="#FF000000"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:justificationMode="inter_word"
            android:textColor="#FF000000"
            android:textSize="20sp"
            android:text="@string/textoTipoDois"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/textoFonte"
            android:textColorLink="#0000FF"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/voltar_tipo_remedio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:height="60dp"
            android:textSize="16sp"
            android:onClick="voltaTipoRemedio"
            android:text="@string/voltar"
            tools:ignore="OnClick,UsingOnClickInXml"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#B22222"
            android:textColor="#FFFFFFFF"/>

    </LinearLayout>

</ScrollView>